STM32F1/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Rebuild target 'ExLib'
compiling stm32f10x_iwdg.c...
compiling stm32f10x_gpio.c...
compiling stm32f10x_dma.c...
compiling misc.c...
compiling stm32f10x_dac.c...
compiling stm32f10x_exti.c...
compiling stm32f10x_adc.c...
compiling stm32f10x_dbgmcu.c...
compiling stm32f10x_bkp.c...
compiling stm32f10x_flash.c...
compiling stm32f10x_pwr.c...
compiling stm32f10x_fsmc.c...
compiling stm32f10x_crc.c...
compiling stm32f10x_cec.c...
compiling stm32f10x_i2c.c...
compiling stm32f10x_rtc.c...
compiling stm32f10x_can.c...
compiling stm32f10x_rcc.c...
compiling stm32f10x_spi.c...
compiling stm32f10x_wwdg.c...
compiling stm32f10x_usart.c...
compiling stm32f10x_sdio.c...
compiling stm32f10x_tim.c...
compiling system_stm32f10x.c...
assembling startup_stm32f10x_md.s...
compiling ExLib_Main.cpp...
User/main.cpp(12): error: use of overloaded operator '==' is ambiguous (with operand types 'ExLib::GPIO' and 'bool')
    if (PC13 == true) {
        ~~~~ ^  ~~~~
User/main.cpp(12): note: because of ambiguity in conversion of 'ExLib::GPIO' to 'float'
./ExLib/Include/ExLib_GPIO.hpp(181): note: candidate function
    operator GPIO_Pin();
    ^
./ExLib/Include/ExLib_GPIO.hpp(183): note: candidate function
    inline operator bool() { return read(); }
           ^
User/main.cpp(12): note: built-in candidate operator==(float, int)
    if (PC13 == true) {
             ^
User/main.cpp(12): note: built-in candidate operator==(double, int)
User/main.cpp(12): note: built-in candidate operator==(long double, int)
User/main.cpp(12): note: built-in candidate operator==(int, int)
User/main.cpp(12): note: built-in candidate operator==(long, int)
User/main.cpp(12): note: built-in candidate operator==(long long, int)
User/main.cpp(12): note: built-in candidate operator==(unsigned int, int)
User/main.cpp(12): note: built-in candidate operator==(unsigned long, int)
User/main.cpp(12): note: built-in candidate operator==(unsigned long long, int)
1 error generated.
compiling main.cpp...
compiling ExLib_PrintStream.cpp...
compiling ExLib_Exception.cpp...
compiling ExLib_GPIO.cpp...
".\Objects\STM32F10x_test.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
